cmake_minimum_required(VERSION 2.8)
project(project)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
link_directories(/home/duzongwei/CppWorkPlace/CppLib/OpenCV-CUDA/opencv/build/lib)
message(STATUS "${OpenCV_INCLUDE_DIRS}")
message(STATUS "${OpenCV_LIBS}")

add_executable(project test_cuda.cpp )
target_link_libraries(project ${OpenCV_LIBS} )
